--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link rel="icon" href="images/favicon.ico" />
 <style>
   :root{
-    --logo-h:160px; --bg:#f7f3ec; --card:#fff; --fg:#1a1a1a; --muted:#6f6a5f;
+    --logo-h:96px; /* קטן יותר, סטנדרטי */
+    --bg:#f7f3ec; --card:#fff; --fg:#1a1a1a; --muted:#6f6a5f;
     --accent:#b07a2a; --border:#eadfce; --shadow:0 6px 18px rgba(50,24,0,.06);
     --s-1:6px; --s-2:10px; --s-3:14px; --s-4:18px; --s-5:22px; --input-h:42px;
   }
@@ -32,14 +33,30 @@
   }
   a{color:inherit;text-decoration:none}
   .wrap{max-width:1160px;margin:0 auto;padding:0 16px 56px}
-  header{text-align:center;padding:32px 16px 8px}
-  .logo{display:block;margin:0 auto var(--s-2);height:var(--logo-h);max-width:90%;object-fit:contain}
-  header h1{font-weight:800;font-size:clamp(26px,3.5vw,40px);margin:0 0 var(--s-1)}
-  header p{margin:var(--s-1) 0;color:var(--muted);font-weight:400}
-  .cta{display:inline-block;margin-top:var(--s-2);padding:12px 18px;border:1px solid var(--accent);border-radius:14px;font-weight:700;background:linear-gradient(#fff,#fff9f0);box-shadow:var(--shadow);transition:.2s}
-  .cta:hover{transform:translateY(-2px);box-shadow:0 10px 20px rgba(176,122,42,.12)}
 
-  /* FAQ – עיצוב ונשיאה מעט למעלה */
+  /* ===== HEADER – נקי וסטנדרטי ===== */
+  header{
+    background:#fff;
+    border-bottom:1px solid var(--border);
+    box-shadow:0 2px 10px rgba(0,0,0,.03);
+  }
+  header .inner{
+    max-width:1160px; margin:0 auto; padding:20px 16px 18px;
+    display:flex; flex-direction:column; align-items:center; text-align:center;
+  }
+  .logo{
+    display:block; height:var(--logo-h); max-width:260px; width:auto; object-fit:contain;
+    margin:0 auto 8px;
+  }
+  header h1{font-weight:800;font-size:clamp(26px,3.2vw,36px);margin:6px 0 4px}
+  header p{margin:0 0 10px;color:var(--muted);font-weight:600}
+  .cta{
+    display:inline-block; padding:10px 16px; border:1px solid var(--accent);
+    border-radius:12px; font-weight:700; background:#fff; transition:.18s; box-shadow:var(--shadow)
+  }
+  .cta:hover{transform:translateY(-1px); box-shadow:0 10px 20px rgba(176,122,42,.12)}
+
+  /* ===== FAQ (למטה – הכל נשאר זהה לגרסה הקודמת) ===== */
   .faq{margin:0 0 12px}
   .faq h2{font-weight:800;font-size:20px;margin:0 0 8px}
   .faq details{border:1px solid var(--border);border-radius:12px;background:#fff;box-shadow:var(--shadow);margin:8px 0;overflow:hidden}
@@ -47,7 +64,7 @@
   .faq summary::marker{content:""}
   .faq details > div{padding:0 14px 12px 14px;color:var(--muted);font-weight:600;border-top:1px dashed var(--border)}
 
-  /* אזור פילטרים: חיפוש גלוי + כפתורי פעולה צמודים */
+  /* ===== Filters area (כמו בגרסה הקודמת) ===== */
   .filters{background:#fff;border:1px solid var(--border);border-radius:14px;box-shadow:var(--shadow);padding:12px;margin:0 0 22px}
   .filters .top{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
   .f-field{display:flex;align-items:center;gap:8px;min-width:280px}
@@ -56,16 +73,13 @@
   .f-input,.f-select{height:var(--input-h);padding:0 12px;border:1px solid var(--border);border-radius:10px;background:#fff;font-weight:600}
   .f-input{width:100%}
   .filters-actions{display:flex;gap:8px;align-items:center}
-  .filters-toggle,.filters-reset{
-    height:var(--input-h);padding:0 12px;border-radius:10px;background:#fff;font-weight:700
-  }
+  .filters-toggle,.filters-reset{height:var(--input-h);padding:0 12px;border-radius:10px;background:#fff;font-weight:700}
   .filters-toggle{border:1px dashed var(--border);color:#6b5a43}
   .filters-reset{border:1px solid var(--border);color:#7a6c57}
   .filters .panel{margin-top:10px;padding-top:10px;border-top:1px dashed var(--border)}
   .filters .panel[hidden]{display:none}
   .filters .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
   .f-select{min-width:220px}
-
   @media (max-width:700px){
     .filters .top{flex-direction:column;align-items:stretch}
     .f-field,.filters-actions{width:100%}
@@ -74,19 +88,12 @@
     .f-select{width:100%;min-width:unset}
   }
 
-  /* גריד מוצרים */
+  /* ===== Grid + Cards + Carousel + Price + Buttons (ללא שינוי) ===== */
   .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px;}
   @media (max-width:1200px){.grid{grid-template-columns:repeat(auto-fill,minmax(240px,1fr));}}
   @media (max-width:520px){.grid{grid-template-columns:1fr;gap:12px;justify-items:center}}
-
-  .card{
-    display:flex;flex-direction:column;background:var(--card);
-    border:1px solid var(--border);border-radius:16px;padding:12px;box-shadow:var(--shadow);transition:.2s;
-    min-height:620px;
-  }
+  .card{display:flex;flex-direction:column;background:var(--card);border:1px solid var(--border);border-radius:16px;padding:12px;box-shadow:var(--shadow);transition:.2s;min-height:620px;}
   .card:hover{transform:translateY(-3px);box-shadow:0 12px 24px rgba(32,18,0,.08)}
-
-  /* קרוסלה */
   .imagebox{position:relative;border-radius:12px;overflow:hidden;background:#f1f1f1;height:240px}
   .slide{position:absolute;inset:0;opacity:0;transition:opacity .25s;z-index:1;pointer-events:none}
   .slide.active{opacity:1;pointer-events:auto}
@@ -98,43 +105,36 @@
   .cbtn,.cbtn *{pointer-events:auto;cursor:pointer}
   .imagebox.single .cnav{display:none}
   .placeholder{position:absolute;inset:0}
-
   .meta-row{display:flex;gap:8px;align-items:center;justify-content:center;margin:var(--s-2) 0 var(--s-2);flex-wrap:wrap}
   .tag{display:inline-flex;gap:6px;align-items:center;padding:4px 10px;border:1px dashed var(--border);border-radius:999px;font-size:12px;color:var(--muted);background:#fff}
-
   .title{margin:var(--s-2) 0 calc(var(--s-3) + 10px);text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:7.8em;gap:6px}
   .t1{font-weight:800;font-size:clamp(15px,2.1vw,18px);line-height:1.35;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;max-height:2.8em}
   .t2{font-weight:600;font-size:clamp(13px,1.7vw,15px);line-height:1.35;color:var(--muted);display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;max-height:2.8em}
   .t3{font-weight:600;font-size:13px;color:var(--muted)}
   .t2 .insp{color:var(--accent);font-weight:800}
-
   .size-row{display:flex;gap:8px;align-items:center;margin:0 0 var(--s-3)}
   .size-label{font-weight:700}
   .size-select{flex:1;padding:10px 12px;border:1px solid var(--border);border-radius:10px;background:#fff;font-weight:600;direction:rtl;text-align:right;appearance:none;
     background-image:linear-gradient(45deg,transparent 50%,var(--accent) 50%),linear-gradient(135deg,var(--accent) 50%,transparent 50%),linear-gradient(to left,#fff,#fff);
     background-position:16px 50%,24px 50%,0 0;background-size:8px 8px,8px 8px,2.5em 100%;background-repeat:no-repeat;padding-left:48px}
-
   .price{margin:0 0 var(--s-2);align-items:baseline;gap:10px;color:var(--fg);display:flex;justify-content:center}
   .price-amount{font-weight:800;font-size:20px;letter-spacing:.02em}
   .price-sep{color:#b9a98f}
   .price-size{font-weight:600;font-size:14px;color:var(--muted)}
-
   .size-note{display:none;margin:0 0 var(--s-3);font-size:13px;color:var(--muted);font-weight:600;text-align:center;line-height:1.35}
   .size-note.show{display:block}
-
   .wa-btn{margin-top:auto;display:block;width:100%;padding:12px 16px;border-radius:12px;border:1px solid var(--accent);background:#fff;font-weight:700;transition:.2s;text-align:center}
   .wa-btn:hover{background:#fff3e0;transform:translateY(-1px)}
   .wa-btn.disabled{opacity:.55;pointer-events:auto}
-
   .toast{position:fixed;z-index:9999;padding:10px 14px;border-radius:12px;background:#111;color:#fff;font-size:14px;box-shadow:var(--shadow);opacity:0;transform:translateY(8px);transition:.2s}
   .toast.show{opacity:1;transform:translateY(0)}
   .empty{text-align:center;color:var(--muted);padding:20px 0;font-weight:700}
 
-  /* מובייל – תמונה מעט גבוהה יותר + חצים פנימה */
+  /* מובייל – כמו בגרסה הקודמת */
   @media (max-width:520px){
     .wrap{padding:0 12px 48px}
     .card{min-height:unset;max-width:440px;width:100%;margin:0 auto;padding:12px}
-    .imagebox{height:min(60vw,340px)}   /* ↑ קצת יותר גבוה כדי שלא ייחתך */
+    .imagebox{height:min(60vw,340px)}
     .cnav{padding:0 10px}
     .title{min-height:unset;margin:10px 0 8px}
     .t1,.t2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;max-height:2.9em;overflow:hidden;word-break:break-word}
@@ -149,15 +149,19 @@
 </style>
 </head>
 <body>
-  <header class="wrap">
-    <img src="images/logo.png" alt="לוגו המותג" class="logo" onerror="this.style.display='none'">
-    <h1>קטלוג בשמי דלוקס סנס</h1>
-    <p>ייצור פרטי בכמויות קטנות. בחירה, שאלות והזמנה דרך WhatsApp.</p>
-    <a class="cta" id="waTop" target="_blank" rel="noopener">דברו איתי ב-WhatsApp</a>
+
+  <!-- ===== HEADER – נקי ===== -->
+  <header>
+    <div class="inner">
+      <img src="images/logo.png" alt="לוגו המותג" class="logo" onerror="this.style.display='none'">
+      <h1>קטלוג בשמי דלוקס סנס</h1>
+      <p>ייצור פרטי בכמויות קטנות. בחירה, שאלות והזמנה דרך WhatsApp.</p>
+      <a class="cta" id="waTop" target="_blank" rel="noopener">דברו איתי ב-WhatsApp</a>
+    </div>
   </header>
 
   <main class="wrap">
-    <!-- FAQ -->
+    <!-- FAQ (ללא שינוי בתוכן, רק העיצוב נשאר מהגרסה הקודמת) -->
     <section class="faq">
       <h2>שאלות נפוצות</h2>
       <details><summary>איך מבצעים הזמנה?</summary><div>בוחרים נפח (100 מ״ל / 10 מ״ל / 5 מ״ל), המחיר יוצג, לוחצים על כפתור ה-WhatsApp וההודעה תתמלא אוטומטית.</div></details>
@@ -165,7 +169,7 @@
       <details><summary>משלוחים וזמני הכנה</summary><div>נשלח בד״כ תוך 1–3 ימי עסקים מרגע האישור. איסוף מתואם אפשרי.</div></details>
     </section>
 
-    <!-- פילטרים: חיפוש גלוי + פעולות -->
+    <!-- ===== Filters (ללא שינוי פונקציונלי) ===== -->
     <section class="filters" id="filters">
       <div class="top">
         <div class="f-field grow">
@@ -207,7 +211,7 @@
 
   <footer class="wrap"><div>© 2025 שם המותג • הזמנה דרך WhatsApp בלבד • פרטי קשר: example@mail.com • 050-0000000</div></footer>
 
-  <!-- Lightbox / Zoom -->
+  <!-- ===== Lightbox / Zoom (ללא שינוי) ===== -->
   <div id="lightbox" style="position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;align-items:center;justify-content:center;z-index:9999;">
     <div style="position:relative;max-width:95vw;max-height:90vh;display:flex;flex-direction:column;gap:10px;align-items:center;">
       <img id="lb-img" alt="" style="max-width:95vw;max-height:80vh;object-fit:contain;transform-origin:center center;"/>
