--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   .card{
     display:flex;flex-direction:column;background:var(--card);
     border:1px solid var(--border);border-radius:16px;padding:12px;box-shadow:var(--shadow);transition:.2s;
-    min-height:620px;
+    min-height:560px; /* ↓ היה 620px – מצמצם את ה"בור" בין המחיר לכפתור */
   }
   .card:hover{transform:translateY(-3px);box-shadow:0 12px 24px rgba(32,18,0,.08)}
 
@@ -142,46 +142,25 @@
   .meta-row{display:flex;gap:8px;align-items:center;justify-content:center;margin:var(--s-2) 0 var(--s-2);flex-wrap:wrap}
   .tag{display:inline-flex;gap:6px;align-items:center;padding:4px 10px;border:1px dashed var(--border);border-radius:999px;font-size:12px;color:var(--muted);background:#fff}
 
-  /* ====== כותרות מוצרים – הוגדלו רספונסיבית ====== */
+  /* כותרות – כבר מוגדלות רספונסיבית */
   .title{
     margin:var(--s-2) 0 calc(var(--s-3) + 10px);
     text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center;
-    min-height:8.6em; /* מעט יותר כדי להכיל שתי שורות גדולות */
-    gap:6px
+    min-height:8.6em; gap:6px
   }
-  .t1{
-    font-weight:800;
-    /* בסיס: דסקטופ קטן ומעלה */
-    font-size:clamp(18px,2.2vw,20px);
-    line-height:1.35;
-    display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;max-height:3.1em;
-  }
-  .t2{
-    font-weight:600;
-    font-size:clamp(14px,1.9vw,16px);
-    line-height:1.35;color:var(--muted);
-    display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;max-height:3.1em;
-  }
+  .t1{font-weight:800;font-size:clamp(18px,2.2vw,20px);line-height:1.35;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;max-height:3.1em;}
+  .t2{font-weight:600;font-size:clamp(14px,1.9vw,16px);line-height:1.35;color:var(--muted);display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;max-height:3.1em;}
   .t3{ font-weight:600; font-size:14px; color:var(--muted) }
   .t2 .insp{color:var(--accent);font-weight:800}
 
-  /* טאבלט (700–1024): עוד קפיצה */
   @media (min-width:700px) and (max-width:1024px){
     .t1{ font-size:clamp(20px,2.6vw,24px); }
     .t2{ font-size:clamp(15px,2.1vw,18px); }
     .t3{ font-size:14.5px; }
   }
-  /* דסקטופ רחב (≥1200): עדינה */
   @media (min-width:1200px){
     .t1{ font-size:21px; }
     .t2{ font-size:16px; }
-  }
-  /* מובייל (≤520): קריא וברור יותר */
-  @media (max-width:520px){
-    .title{min-height:unset; margin:10px 0 8px}
-    .t1{ font-size:19px; max-height:3.2em }
-    .t2{ font-size:15.5px; max-height:3.2em }
-    .t3{ font-size:13.5px }
   }
 
   .size-row{display:flex;gap:8px;align-items:center;margin:0 0 var(--s-3)}
@@ -198,6 +177,8 @@
   .size-note{display:none;margin:0 0 var(--s-3);font-size:13px;color:var(--muted);font-weight:600;text-align:center;line-height:1.35}
   .size-note.show{display:block}
 
+  /* כאן היה מקור הרווח: הכפתור נדחף לתחתית הכרטיס.
+     משאירים זאת בדסקטופ, אבל במובייל נבטל. */
   .wa-btn{margin-top:auto;display:block;width:100%;padding:12px 16px;border-radius:12px;border:1px solid var(--accent);background:#fff;font-weight:700;transition:.2s;text-align:center}
   .wa-btn:hover{background:#fff3e0;transform:translateY(-1px)}
   .wa-btn.disabled{opacity:.55;pointer-events:auto}
@@ -205,6 +186,22 @@
   .toast{position:fixed;z-index:9999;padding:10px 14px;border-radius:12px;background:#111;color:#fff;font-size:14px;box-shadow:var(--shadow);opacity:0;transform:translateY(8px);transition:.2s}
   .toast.show{opacity:1;transform:translateY(0)}
   .empty{text-align:center;color:var(--muted);padding:20px 0;font-weight:700}
+
+  /* מובייל – ללא גובה מינימלי וללא דחיפת הכפתור לתחתית */
+  @media (max-width:520px){
+    .wrap{padding:0 12px 48px}
+    .card{min-height:unset;max-width:440px;width:100%;margin:0 auto;padding:12px}
+    .imagebox{height:min(60vw,340px)}
+    .cnav{padding:0 10px}
+    .title{min-height:unset;margin:10px 0 8px}
+    .t1{font-size:19px;max-height:3.2em}
+    .t2{font-size:15.5px;max-height:3.2em}
+    .t3{font-size:13.5px}
+    .meta-row{justify-content:center;margin:8px 0}
+    .size-row{margin:6px 0 8px}
+    .price{margin:6px 0 8px}
+    .wa-btn{margin-top:10px;} /* ← במקום auto */
+  }
 </style>
 </head>
 <body>
@@ -606,7 +603,6 @@ document.addEventListener('DOMContentLoaded',async()=>{
     toggle.setAttribute('aria-expanded', String(open));
   });
 
-  /* איפוס סינון */
   document.getElementById('filtersReset').addEventListener('click',()=>{
     qEl.value=""; brandEl.value=""; genderEl.value=""; sortEl.value="";
     applyFilters(ALL);
