--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <link rel="icon" href="images/favicon.ico" />
 <style>
   :root{
-    --logo-h:82px;          /* דסקטופ/טאבלט */
-    --logo-h-sm:64px;       /* מובייל */
+    /* ↑ לוגו הוגדל ~10% */
+    --logo-h:90px;          /* דסקטופ/טאבלט (היה 82px) */
+    --logo-h-sm:70px;       /* מובייל (היה 64px) */
     --bg:#f7f3ec; --card:#fff; --fg:#1a1a1a; --muted:#6f6a5f;
     --accent:#b07a2a; --border:#eadfce; --shadow:0 6px 18px rgba(50,24,0,.06);
     --s-1:6px; --s-2:10px; --s-3:14px; --s-4:18px; --s-5:22px; --input-h:42px;
@@ -44,17 +45,17 @@
   }
   header .inner{
     max-width:1160px; margin:0 auto; padding:14px 16px;
-    display:grid; grid-template-columns:auto 1fr auto; gap:16px; align-items:center;
+    /* היה: grid-template-columns:auto 1fr auto; → זה צמצם את מקום הכותרת */
+    display:grid; grid-template-columns:1fr auto; gap:16px; align-items:center;
   }
-  .brand{display:flex; align-items:center; gap:14px; min-width:0}
-  .logo{height:var(--logo-h); width:auto; max-width:180px; object-fit:contain}
+  .brand{display:flex; align-items:center; gap:16px; min-width:0}
+  .logo{height:var(--logo-h); width:auto; max-width:200px; object-fit:contain}
   .titles{display:flex; flex-direction:column; min-width:0}
   header h1{
     font-weight:800;
     font-size:clamp(24px,3.2vw,36px);
     line-height:1.2;
     margin:0;
-    white-space:normal; overflow:visible; text-overflow:clip;
     overflow-wrap:anywhere;
   }
   header p{ margin:2px 0 0; color:var(--muted); font-weight:600; font-size:14px; }
@@ -63,24 +64,21 @@
     border-radius:12px; font-weight:700; background:#fff; transition:.18s; box-shadow:var(--shadow)
   }
   .cta:hover{transform:translateY(-1px); box-shadow:0 10px 20px rgba(176,122,42,.12)}
+
   @media (min-width:700px) and (max-width:1024px){
     header h1{ font-size:clamp(26px,3.4vw,40px); }
     .logo{ height:calc(var(--logo-h) + 2px); }
   }
   @media (max-width:900px){
-    header .inner{grid-template-columns:1fr auto; grid-auto-rows:auto}
+    header .inner{grid-template-columns:1fr auto}
     .brand{order:1}
     .cta{order:2; justify-self:start; margin-top:6px}
-    .logo{height:var(--logo-h-sm); max-width:150px}
+    .logo{height:var(--logo-h-sm); max-width:170px}
   }
   @media (max-width:520px){
-    .logo{height:var(--logo-h-sm); max-width:130px}
+    .logo{height:var(--logo-h-sm); max-width:150px}
     header h1{ font-size:clamp(20px,6vw,26px); line-height:1.22; }
     header p{font-size:13px}
-  }
-  @media (max-width:360px){
-    .logo{height:56px; max-width:110px}
-    header h1{ font-size:clamp(19px,6.5vw,24px) }
   }
 
   /* ===== FAQ ===== */
@@ -123,7 +121,7 @@
   .card{
     display:flex;flex-direction:column;background:var(--card);
     border:1px solid var(--border);border-radius:16px;padding:12px;box-shadow:var(--shadow);transition:.2s;
-    min-height:560px; /* ↓ היה 620px – מצמצם את ה"בור" בין המחיר לכפתור */
+    min-height:560px;
   }
   .card:hover{transform:translateY(-3px);box-shadow:0 12px 24px rgba(32,18,0,.08)}
 
@@ -142,7 +140,6 @@
   .meta-row{display:flex;gap:8px;align-items:center;justify-content:center;margin:var(--s-2) 0 var(--s-2);flex-wrap:wrap}
   .tag{display:inline-flex;gap:6px;align-items:center;padding:4px 10px;border:1px dashed var(--border);border-radius:999px;font-size:12px;color:var(--muted);background:#fff}
 
-  /* כותרות – כבר מוגדלות רספונסיבית */
   .title{
     margin:var(--s-2) 0 calc(var(--s-3) + 10px);
     text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center;
@@ -155,7 +152,7 @@
 
   @media (min-width:700px) and (max-width:1024px){
     .t1{ font-size:clamp(20px,2.6vw,24px); }
-    .t2{ font-size:clamp(15px,2.1vw,18px); }
+    .t2{ font size:clamp(15px,2.1vw,18px); }
     .t3{ font-size:14.5px; }
   }
   @media (min-width:1200px){
@@ -177,8 +174,6 @@
   .size-note{display:none;margin:0 0 var(--s-3);font-size:13px;color:var(--muted);font-weight:600;text-align:center;line-height:1.35}
   .size-note.show{display:block}
 
-  /* כאן היה מקור הרווח: הכפתור נדחף לתחתית הכרטיס.
-     משאירים זאת בדסקטופ, אבל במובייל נבטל. */
   .wa-btn{margin-top:auto;display:block;width:100%;padding:12px 16px;border-radius:12px;border:1px solid var(--accent);background:#fff;font-weight:700;transition:.2s;text-align:center}
   .wa-btn:hover{background:#fff3e0;transform:translateY(-1px)}
   .wa-btn.disabled{opacity:.55;pointer-events:auto}
@@ -187,7 +182,7 @@
   .toast.show{opacity:1;transform:translateY(0)}
   .empty{text-align:center;color:var(--muted);padding:20px 0;font-weight:700}
 
-  /* מובייל – ללא גובה מינימלי וללא דחיפת הכפתור לתחתית */
+  /* מובייל – התאמות */
   @media (max-width:520px){
     .wrap{padding:0 12px 48px}
     .card{min-height:unset;max-width:440px;width:100%;margin:0 auto;padding:12px}
@@ -200,7 +195,7 @@
     .meta-row{justify-content:center;margin:8px 0}
     .size-row{margin:6px 0 8px}
     .price{margin:6px 0 8px}
-    .wa-btn{margin-top:10px;} /* ← במקום auto */
+    .wa-btn{margin-top:10px}
   }
 </style>
 </head>
@@ -362,7 +357,7 @@ function parseFromLongTitle(longTitle){
   }
   const HOUSE_TOKENS=["Fragrance Deluxe","Fragrance Delux","Fragrance World","Maison Legend","Mayson Legend","Maison Alhambra","Lattafa","Paris Corner","by"];
   let dupeName=dupeTitle; HOUSE_TOKENS.forEach(tok=> dupeName=dupeName.replace(new RegExp(tok,"ig"),"").trim());
-  return {dupeName,dupeTitle,inspBrand,inspProduct,inspStr,gender,genderText:rightPart,longTitle:norm};
+  return {dupeName,dupeTitle, inspBrand,inspProduct,inspStr, gender,genderText:rightPart, longTitle:norm};
 }
 
 /* ===== filename candidates ===== */
