--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="icon" href="images/favicon.ico" />
 <style>
   :root{
-    /* ↑ לוגו הוגדל ~10% */
-    --logo-h:90px;          /* דסקטופ/טאבלט (היה 82px) */
-    --logo-h-sm:70px;       /* מובייל (היה 64px) */
+    /* לוגו מוגדל ~10% */
+    --logo-h:90px;          /* דסקטופ/טאבלט */
+    --logo-h-sm:70px;       /* מובייל */
     --bg:#f7f3ec; --card:#fff; --fg:#1a1a1a; --muted:#6f6a5f;
     --accent:#b07a2a; --border:#eadfce; --shadow:0 6px 18px rgba(50,24,0,.06);
     --s-1:6px; --s-2:10px; --s-3:14px; --s-4:18px; --s-5:22px; --input-h:42px;
@@ -45,7 +45,6 @@
   }
   header .inner{
     max-width:1160px; margin:0 auto; padding:14px 16px;
-    /* היה: grid-template-columns:auto 1fr auto; → זה צמצם את מקום הכותרת */
     display:grid; grid-template-columns:1fr auto; gap:16px; align-items:center;
   }
   .brand{display:flex; align-items:center; gap:16px; min-width:0}
@@ -65,15 +64,19 @@
   }
   .cta:hover{transform:translateY(-1px); box-shadow:0 10px 20px rgba(176,122,42,.12)}
 
+  /* טאבלט */
   @media (min-width:700px) and (max-width:1024px){
     header h1{ font-size:clamp(26px,3.4vw,40px); }
     .logo{ height:calc(var(--logo-h) + 2px); }
   }
+  /* מובייל כללי */
   @media (max-width:900px){
-    header .inner{grid-template-columns:1fr auto}
-    .brand{order:1}
-    .cta{order:2; justify-self:start; margin-top:6px}
     .logo{height:var(--logo-h-sm); max-width:170px}
+  }
+  /* מובייל צר – הכפתור יורד שורה מתחת לכותרת */
+  @media (max-width:600px){
+    header .inner{grid-template-columns:1fr; grid-auto-flow:row; gap:10px; align-items:start;}
+    .cta{justify-self:stretch; width:100%; text-align:center; margin-top:4px}
   }
   @media (max-width:520px){
     .logo{height:var(--logo-h-sm); max-width:150px}
@@ -121,7 +124,7 @@
   .card{
     display:flex;flex-direction:column;background:var(--card);
     border:1px solid var(--border);border-radius:16px;padding:12px;box-shadow:var(--shadow);transition:.2s;
-    min-height:560px;
+    min-height:560px; /* נשמר אחרי תיקון הרווחים */
   }
   .card:hover{transform:translateY(-3px);box-shadow:0 12px 24px rgba(32,18,0,.08)}
 
@@ -152,7 +155,7 @@
 
   @media (min-width:700px) and (max-width:1024px){
     .t1{ font-size:clamp(20px,2.6vw,24px); }
-    .t2{ font size:clamp(15px,2.1vw,18px); }
+    .t2{ font-size:clamp(15px,2.1vw,18px); }
     .t3{ font-size:14.5px; }
   }
   @media (min-width:1200px){
@@ -182,7 +185,7 @@
   .toast.show{opacity:1;transform:translateY(0)}
   .empty{text-align:center;color:var(--muted);padding:20px 0;font-weight:700}
 
-  /* מובייל – התאמות */
+  /* מובייל – התאמות גובה וריווח בכרטיסים */
   @media (max-width:520px){
     .wrap{padding:0 12px 48px}
     .card{min-height:unset;max-width:440px;width:100%;margin:0 auto;padding:12px}
@@ -528,8 +531,8 @@ function renderProducts(list){
 
     function applySize(v){
       selectedById[pid]=v; const price=p.price[v];
-      priceVal.textContent=price; const sizeHe=(v==="100"?"100 מ״ל":v==="10"?"10 מ״ל":"5 מ״ל");
-      priceSize.textContent=sizeHe; priceSep.style.display=price&&sizeHe?'inline':'none';
+      const sizeHe=(v==="100"?"100 מ״ל":v==="10"?"10 מ״ל":"5 מ״ל");
+      priceVal.textContent=price; priceSize.textContent=sizeHe; priceSep.style.display=price&&sizeHe?'inline':'none';
       if(v==="10"){ noteEl.textContent="כולל שפריצר למילוי-מחדש (Refillable)"; noteEl.classList.add('show'); }
       else{ noteEl.textContent=""; noteEl.classList.remove('show'); }
       waBtn.href=buildWaHref(p,sizeHe,price); waBtn.classList.remove('disabled');
